[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Networking/TournamentLobby.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="TournamentLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 76.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = 64.0
margin_right = 55.0
margin_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Waiting"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BracketHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="SettingsHolder" type="Node2D" parent="."]
z_index = 101

[node name="SettingsPage" parent="SettingsHolder" instance=ExtResource( 2 )]
visible = false
margin_left = 313.519
margin_top = 108.173
margin_right = 743.519
margin_bottom = 461.173

[connection signal="pressed" from="QuitButton" to="." method="onQuitButtonPressed"]
[connection signal="pressed" from="SettingsButton" to="." method="onSettingsPressed"]
